--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
-    "expo": "^48.0.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.71.3",
-    "react-native-web": "~0.18.7"
+    "expo": "^45.0.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.0",
+    "react-native": "0.68.2",
+    "react-native-web": "~0.18.7",
+    "expo-splash-screen": "~0.16.2",
+    "expo-status-bar": "~1.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -13,9 +15,10 @@
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "startr": "expo start --dev-client --clear",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "version": "1.0.0",
