--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
     "expo": "^45.0.4",
+    "expo-splash-screen": "~0.16.2",
+    "expo-status-bar": "~1.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.0",
     "react-native": "0.68.2",
-    "react-native-web": "~0.18.7",
-    "expo-splash-screen": "~0.16.2",
-    "expo-status-bar": "~1.4.4"
+    "react-native-chat-sdk": "../..",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
