--- a/app.json
+++ b/app.json
@@ -14,6 +14,7 @@
     },
     "ios": {
       "bundleIdentifier": "com.example.rn.message.demo"
-    }
+    },
+    "plugins": ["expo-image-picker"]
   }
 }
