--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.10",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "^45.0.4",
+    "expo-asset": "~8.6.0",
+    "expo-av": "^11.0.0",
+    "expo-blur": "^11.2.0",
+    "expo-camera": "^12.3.0",
+    "expo-constants": "~13.1.0",
+    "expo-crypto": "^10.2.0",
+    "expo-document-picker": "^10.3.0",
+    "expo-file-system": "^14.1.0",
+    "expo-image-picker": "~13.1.0",
+    "expo-media-library": "^14.2.0",
+    "expo-notifications": "^0.15.4",
     "expo-splash-screen": "~0.16.2",
+    "expo-sqlite": "^10.3.0",
     "expo-status-bar": "~1.4.4",
+    "expo-video-thumbnails": "^6.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.0",
-    "react-native": "0.68.2",
-    "react-native-chat-sdk": "../..",
+    "react-native": "0.68.5",
+    "react-native-screens": "^3.20.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
