--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.0",
     "react-native": "0.68.5",
+    "react-native-chat-sdk": "^1.1.2-beta.3",
     "react-native-screens": "^3.20.0",
     "react-native-web": "~0.18.7"
   },
