--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@react-native-picker/picker": "^2.4.10",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "^45.0.4",
     "expo-asset": "~8.6.0",
@@ -9,6 +10,7 @@
     "expo-camera": "^12.3.0",
     "expo-constants": "~13.1.0",
     "expo-crypto": "^10.2.0",
+    "expo-dev-client": "1.0.1",
     "expo-document-picker": "^10.3.0",
     "expo-file-system": "^14.1.0",
     "expo-image-picker": "~13.1.0",
@@ -22,8 +24,9 @@
     "react-dom": "17.0.0",
     "react-native": "0.68.5",
     "react-native-chat-sdk": "^1.1.2-beta.3",
+    "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -36,7 +39,8 @@
     "startr": "expo start --dev-client --clear",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "env": "node generate-env.js"
   },
   "version": "1.0.0",
   "private": true,
