--- a/app.json
+++ b/app.json
@@ -4,17 +4,14 @@
     "slug": "message_demo_ts",
     "version": "1.0.0",
     "sdkVersion": "45.0.0",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "android": {
       "package": "com.example.rn.message.demo"
     },
     "ios": {
-      "bundleIdentifier": "com.example.rn.message.demo"
+      "bundleIdentifier": "com.example.rn.message.demo",
+      "usesIcloudStorage": false
     },
-    "plugins": ["expo-image-picker"]
+    "plugins": ["expo-image-picker", "expo-document-picker"]
   }
 }
