--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -334,6 +334,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation project(':lottie-react-native')
 }
 
 if (isNewArchitectureEnabled()) {
