--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-sqlite": "^10.3.0",
     "expo-status-bar": "~1.4.4",
     "expo-video-thumbnails": "^6.4.0",
+    "lottie-react-native": "^5.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.0",
     "react-native": "0.68.5",
