chore: update log component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "dlog",
+        "easemob",
         "exclamationcircleo",
         "Ionicons",
         "Pressable"
