--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "slug": "message_demo_ts",
     "version": "1.0.0",
     "sdkVersion": "45.0.0",
+    "assetBundlePatterns": ["**/*"],
     "platforms": ["ios", "android", "web"],
     "android": {
       "package": "com.example.rn.message.demo"
