--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@tsconfig/react-native": "^3.0.1",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
+    "eslint": "^8.40.0",
+    "prettier": "^2.8.8",
     "typescript": "^4.6.3"
   },
   "scripts": {
@@ -41,7 +45,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "env": "node generate-env.js"
+    "env": "node generate-env.js",
+    "lint": "eslint ."
   },
   "version": "1.0.0",
   "private": true,
