--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "strict": true,
     "target": "esnext"
   },
-  "extends": "expo/tsconfig.base"
+  "extends": "@tsconfig/react-native/tsconfig.json"
 }
