update: doublequote to singlequote

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "easemob",
         "exclamationcircleo",
         "Ionicons",
-        "Pressable"
+        "Pressable",
+        "singlequote"
     ]
 }
