--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "17.0.0",
     "react-native": "0.68.5",
     "react-native-chat-sdk": "^1.1.2-beta.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-native-web": "~0.17.7"
